--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,18 +1,23 @@
 body {
-    text-align: left;
+    background: #1e1f24;
+    text-align: center;
     font-family: Arial, Helvetica, sans-serif;
-    color: red;
+    color: #333;
     font-size: 16px;
     margin: 0;
     padding: 0;
 }
 .cabecera {
-    background: #33A;
+    background: #37488b;
     color: white;
     margin: 0;
-    padding: 0.5em;
+    padding: 0.5em 0 0.5 2em;
     font-weight: bold;
     box-shadow: 0px 2px 50px 0px rgba(0,0,0,0.5);
+}
+.cabecera .logo {
+    width: 20px;
+    vertical-align: middle;
 }
 .cabecera .tagline {
     padding: 0 0 0 1em;
@@ -29,4 +34,8 @@ body {
 .container h1 {
     font-size: 20px;
      
+}
+.post {
+    background: white;
+    padding: 1em;
 }
